part2/2.07/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong-dep
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ping-pong-app
  template:
    metadata:
      labels:
        app: ping-pong-app
    spec:
      containers:
        - name: ping-pong-app
          image: mmiglioranza22/k8s-ex.2.08-ping-pong-service
          resources:
            limits:
              cpu: "100m"
              memory: "512Mi"
          # readinessProbe:
          #   initialDelaySeconds: 15
          #   periodSeconds: 10
          #   httpGet:
          #     path: /connected
          #     port: 3000
