part2/2.07/manifests/statefulset-service.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-db-stset
spec:
  serviceName: postgres-svc
  replicas: 2
  selector:
    matchLabels:
      app: postgres-db
  template:
    metadata:
      labels:
        app: postgres-db
    spec:
      containers:
        - name: postgres-db-container
          image: postgres
          ports:
            - name: db
              containerPort: 5432
          volumeMounts:
            - name: postgres-database
              mountPath: /usr/src/app/data
  volumeClaimTemplates:
    - metadata:
        name: postgres-database # same as volumeMount.name
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: local-path
        resources:
          requests:
            storage: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  labels:
    app: postgres-db # the chosen container name
spec:
  ports:
    - name: db
      port: 5432
      protocol: TCP # is this needed?
      targetPort: 5432
  clusterIP: None # this is necessary to ensure pods identity stays the same (for network and name)
  selector:
    app: postgres-db
